--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -8,28 +8,32 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
-    - name: set up JDK 11
+    
+    - name: Set up JDK 11
       uses: actions/setup-java@v4
       with:
         java-version: '11'
         distribution: 'temurin'
-        cache: gradle
-
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew build
-
+    
+    - name: Setup Gradle
+      uses: gradle/gradle-build-action@v2
+    
     - name: Setup Android SDK
       uses: android-actions/setup-android@v3
-
-    - name: Make gradlew executable
-      run: chmod +x ./gradlew
-
+      with:
+        api-level: 33
+        build-tools: 33.0.0
+    
     - name: Build with Gradle
-      run: ./gradlew assembleDebug
+      run: gradle assembleDebug
+    
+    - name: Upload APK
+      if: success()
+      uses: actions/upload-artifact@v4
+      with:
+        name: app-debug-apk
+        path: app/build/outputs/apk/debug/*.apk
