--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,27 +13,19 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     
-    - name: Set up JDK 11
+    - name: Set up JDK 17  # ← 改成 17
       uses: actions/setup-java@v4
       with:
-        java-version: '11'
+        java-version: '17'  # ← 改成 17
         distribution: 'temurin'
-    
-    - name: Setup Gradle
-      uses: gradle/gradle-build-action@v2
+        cache: gradle
     
     - name: Setup Android SDK
       uses: android-actions/setup-android@v3
-      with:
-        api-level: 33
-        build-tools: 33.0.0
+      # 删除下面的 api-level 和 build-tools 参数
+    
+    - name: Make gradlew executable
+      run: chmod +x ./gradlew
     
     - name: Build with Gradle
-      run: gradle assembleDebug
-    
-    - name: Upload APK
-      if: success()
-      uses: actions/upload-artifact@v4
-      with:
-        name: app-debug-apk
-        path: app/build/outputs/apk/debug/*.apk
+      run: ./gradlew assembleDebug
