--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,19 +13,56 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     
-    - name: Set up JDK 17  # ← 改成 17
+    - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
-        java-version: '17'  # ← 改成 17
+        java-version: '17'
         distribution: 'temurin'
-        cache: gradle
     
     - name: Setup Android SDK
       uses: android-actions/setup-android@v3
-      # 删除下面的 api-level 和 build-tools 参数
     
-    - name: Make gradlew executable
+    - name: Generate gradlew if missing
+      run: |
+        # 如果项目中没有 gradlew，自动生成
+        if [ ! -f "./gradlew" ]; then
+          echo "gradlew not found, generating gradle wrapper..."
+          
+          # 1. 下载 gradlew 脚本
+          curl -L https://raw.githubusercontent.com/gradle/gradle/master/gradlew -o gradlew
+          curl -L https://raw.githubusercontent.com/gradle/gradle/master/gradlew.bat -o gradlew.bat
+          
+          # 2. 创建 gradle/wrapper 目录
+          mkdir -p gradle/wrapper
+          
+          # 3. 下载 gradle-wrapper.jar
+          curl -L https://github.com/gradle/gradle/raw/master/gradle/wrapper/gradle-wrapper.jar -o gradle/wrapper/gradle-wrapper.jar
+          
+          # 4. 创建 gradle-wrapper.properties
+          cat > gradle/wrapper/gradle-wrapper.properties << 'EOF'
+          distributionBase=GRADLE_USER_HOME
+          distributionPath=wrapper/dists
+          distributionUrl=https\://services.gradle.org/distributions/gradle-8.5-bin.zip
+          zipStoreBase=GRADLE_USER_HOME
+          zipStorePath=wrapper/dists
+          EOF
+          
+          # 5. 设置权限
+          chmod +x gradlew
+          echo "gradlew generated successfully"
+        else
+          echo "gradlew already exists"
+        fi
+    
+    - name: Grant execute permission for gradlew
       run: chmod +x ./gradlew
     
     - name: Build with Gradle
       run: ./gradlew assembleDebug
+    
+    - name: Upload APK
+      if: success()
+      uses: actions/upload-artifact@v4
+      with:
+        name: app-debug-apk
+        path: app/build/outputs/apk/debug/*.apk
