--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -23,6 +23,7 @@ jobs:
     - name: Setup Android SDK
       uses: android-actions/setup-android@v3
       with:
+        cmdline-tools-version: '12.0'
         packages: |
           platform-tools
           platforms;android-33
