--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -28,7 +28,7 @@ jobs:
       with:
         cmdline-tools-version: '12.0'
         accept-android-sdk-licenses: true
-        packages: platform-tools,platforms;android-34,build-tools;34.0.0
+        packages: platform-tools platforms;android-34 build-tools;34.0.0
     
     # ==== 2. 验证安装 ====
     - name: Verify Android SDK installation
