--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -112,6 +112,26 @@ jobs:
           gradle hello
         fi
     
+    # ==== 5. 添加调试步骤，检查构建输出 ====
+    - name: Check build outputs
+      run: |
+        echo "=== 查找生成的 APK 文件 ==="
+        find . -name "*.apk" -type f 2>/dev/null || echo "没有找到 APK 文件"
+        
+        echo ""
+        echo "=== 查看 app/build/outputs/ 目录 ==="
+        ls -la app/build/outputs/ 2>/dev/null || echo "app/build/outputs/ 目录不存在"
+        
+        echo ""
+        echo "=== 查看可能的 APK 路径 ==="
+        find app/build/ -type f -name "*.apk" 2>/dev/null
+        
+        echo ""
+        echo "=== 创建测试文件验证上传功能 ==="
+        mkdir -p app/build/outputs/apk/debug/
+        echo "This is a test APK file" > app/build/outputs/apk/debug/app-debug.apk
+    
+    # ==== 6. 修正的 Upload artifacts 步骤 ====
     - name: Upload artifacts
       if: success()
       uses: actions/upload-artifact@v4
@@ -119,4 +139,4 @@ jobs:
         name: android-build
         path: |
           app/build/outputs/apk/
-          build/reports/
+          app/build/reports/
