--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -60,78 +60,113 @@ jobs:
           sdkmanager "$pkg" --verbose 2>/dev/null && echo "✓ $pkg installed" || echo "⚠ $pkg not found, skipping"
         done
     
-    # ==== 4. 修复的检查项目文件步骤（使用 echo 方法） ====
-    - name: Check project files
+    # ==== 4. 修复项目结构 ====
+    - name: Fix project structure
       run: |
-        echo "=== Project structure ==="
+        echo "=== 当前项目结构 ==="
         ls -la
         echo ""
         
-        if [ -f "app/build.gradle" ] || [ -f "build.gradle" ]; then
-          echo "Android project detected"
-          find . -name "*.gradle*" -type f 2>/dev/null
+        echo "检查 Gradle 包装器..."
+        if [ ! -f "./gradlew" ]; then
+          echo "gradlew 不存在，生成必要的 Gradle 文件..."
+          
+          # 创建根目录的 build.gradle
+          if [ ! -f "build.gradle" ]; then
+            echo "创建根目录 build.gradle..."
+            cat > build.gradle << 'EOF'
+// Top-level build file
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath "com.android.tools.build:gradle:8.1.0"
+    }
+}
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+    }
+}
+EOF
+          fi
+          
+          # 创建 settings.gradle
+          if [ ! -f "settings.gradle" ]; then
+            echo "创建 settings.gradle..."
+            echo "include ':app'" > settings.gradle
+            echo "rootProject.name = 'PersonalCard'" >> settings.gradle
+          fi
+          
+          # 安装 Gradle 并生成包装器
+          echo "安装 Gradle 并生成包装器..."
+          wget -q https://services.gradle.org/distributions/gradle-8.5-bin.zip
+          unzip -q gradle-8.5-bin.zip
+          ./gradle-8.5/bin/gradle wrapper
+          
+          echo "设置 gradlew 执行权限..."
+          chmod +x ./gradlew
         else
-          echo "No Android project found. Creating simple test project..."
-          
-          mkdir -p app/src/main/java/com/example
-          
-          # 使用 echo 命令逐行创建，避免 heredoc
-          echo 'plugins {' > app/build.gradle
-          echo '    id "com.android.application"' >> app/build.gradle
-          echo '}' >> app/build.gradle
-          echo '' >> app/build.gradle
-          echo 'android {' >> app/build.gradle
-          echo '    namespace "com.example.test"' >> app/build.gradle
-          echo '    compileSdk 34' >> app/build.gradle
-          echo '' >> app/build.gradle
-          echo '    defaultConfig {' >> app/build.gradle
-          echo '        applicationId "com.example.test"' >> app/build.gradle
-          echo '        minSdk 24' >> app/build.gradle
-          echo '        targetSdk 34' >> app/build.gradle
-          echo '    }' >> app/build.gradle
-          echo '}' >> app/build.gradle
-          
-          echo "Test project created"
+          echo "gradlew 已存在"
         fi
+        
+        echo "项目结构修复完成"
     
-    - name: Try to build
+    # ==== 5. 构建项目 ====
+    - name: Build project
       run: |
-        echo "Attempting to build Android project..."
+        echo "开始构建 Android 项目..."
+        echo "当前目录: $(pwd)"
+        echo "项目结构:"
+        ls -la
         
         if [ -f "./gradlew" ]; then
-          echo "Using gradlew from project"
-          chmod +x ./gradlew
+          echo "使用 gradlew 构建..."
           ./gradlew assembleDebug
-        elif [ -f "build.gradle" ] || [ -f "app/build.gradle" ]; then
-          echo "Using global gradle"
-          gradle assembleDebug || echo "Build failed"
+        elif [ -f "app/build.gradle" ]; then
+          echo "使用全局 gradle 构建..."
+          gradle assembleDebug || echo "构建失败"
         else
-          echo "No build files found"
-          echo "Creating test build.gradle..."
-          echo 'task hello { doLast { println "Hello Android!" } }' > build.gradle
-          gradle hello
+          echo "错误：找不到构建文件"
+          exit 1
         fi
     
-    # ==== 5. 添加调试步骤，检查构建输出 ====
+    # ==== 6. 检查构建输出 ====
     - name: Check build outputs
       run: |
         echo "=== 查找生成的 APK 文件 ==="
-        find . -name "*.apk" -type f 2>/dev/null || echo "没有找到 APK 文件"
+        
+        # 查找所有可能的 APK 路径
+        find . -name "*.apk" -type f 2>/dev/null | while read file; do
+          echo "找到 APK: $file"
+          ls -la "$file"
+        done || echo "没有找到 APK 文件"
         
         echo ""
-        echo "=== 查看 app/build/outputs/ 目录 ==="
-        ls -la app/build/outputs/ 2>/dev/null || echo "app/build/outputs/ 目录不存在"
+        echo "=== 查看构建输出目录 ==="
+        if [ -d "app/build/outputs" ]; then
+          echo "app/build/outputs/ 存在:"
+          find app/build/outputs/ -type f -name "*.apk" 2>/dev/null
+        else
+          echo "app/build/outputs/ 不存在"
+          
+          # 尝试查找其他可能的输出目录
+          echo "查找其他构建目录..."
+          find . -type d -name "outputs" 2>/dev/null
+        fi
         
         echo ""
-        echo "=== 查看可能的 APK 路径 ==="
-        find app/build/ -type f -name "*.apk" 2>/dev/null
-        
-        echo ""
-        echo "=== 创建测试文件验证上传功能 ==="
-        mkdir -p app/build/outputs/apk/debug/
-        echo "This is a test APK file" > app/build/outputs/apk/debug/app-debug.apk
+        echo "=== Gradle 构建报告 ==="
+        if [ -d "app/build/reports" ]; then
+          echo "构建报告存在"
+        else
+          echo "没有构建报告"
+        fi
     
-    # ==== 6. 修正的 Upload artifacts 步骤 ====
+    # ==== 7. 上传构建产物 ====
     - name: Upload artifacts
       if: success()
       uses: actions/upload-artifact@v4
@@ -140,3 +175,4 @@ jobs:
         path: |
           app/build/outputs/apk/
           app/build/reports/
+        if-no-files-found: warn
